--- a/model/Cargo.toml
+++ b/model/Cargo.toml
@@ -1,16 +1,14 @@
 [package]
-name = "gw2api"
+name = "gw2api-model"
 version = "0.1.0"
-authors = ["Greaka <mrgreaka@gmail.com>"]
-edition = "2018"
+authors = ["Greaka <cargo@greaka.de>"]
+edition = "2021"
 workspace = "../"
 
 [dependencies]
-reqwest = "0.10.3"
-rest-client = "0.2.0"
 
 [dependencies.serde]
-version = "1.0.92"
+version = "1"
 features = [
     "derive"
 ]
