--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -1,10 +1,17 @@
 [package]
-name = "http"
+name = "gw2api-http"
 version = "0.1.0"
 edition = "2021"
 workspace = "../"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[dependencies]
+chrono = "0.4.19"
+fxhash = "0.2.1"
+serde = "1.0.136"
+
+[dependencies.ureq]
+version = "2.4.0"
+features = ["json"]
 
 [dependencies.gw2api-model]
 path = "../model"
