wip trait format

--- a/model/Cargo.toml
+++ b/model/Cargo.toml
@@ -5,8 +5,12 @@ authors = ["Greaka <cargo@greaka.de>"]
 edition = "2021"
 workspace = "../"
 
+[dependencies.either]
+version = "1.6.1"
+features = ["serde"]
+
 [dependencies.serde]
-version = "1"
+version = "1.0.136"
 features = [
     "derive"
 ]
