fix github workflow

--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -36,6 +36,7 @@ jobs:
       - name: "start proxy and test"
         run: |
           pushd proxy
+          cargo build --release
           cargo run --release &
           prox=$!
           popd
