various changes, see below: add characters endpoint fix a bug in rate limiter switch to parking_lot mutex parallelize requests in `many` convert errors to thiserror

--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -53,6 +53,5 @@ jobs:
           cargo run --release &
           prox=$!
           popd
-          cargo nextest run
-          cargo nextest run --run-ignored ignored-only
+          cargo nextest run --run-ignored all
           kill -9 $prox
