--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -10,6 +10,9 @@ fxhash = "0.2.1"
 serde = "1.0.136"
 bus = "2.2.3"
 either = "1.6.1"
+rayon = "1.5.2"
+parking_lot = "0.12.0"
+thiserror = "1.0.30"
 
 [dependencies.ureq]
 version = "2.4.0"
