--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -3,7 +3,9 @@ name = "proxy"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "proxy"
+path = "src/main.rs"
 
 [dependencies]
 actix-web = "4.0.1"
