--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -53,6 +53,6 @@ jobs:
           cargo run --release > /dev/null &
           prox=$!
           popd
-          cargo test
-          cargo test -- --ignored
+          cargo nextest run
+          cargo nextest run --run-ignored ignored-only
           kill -9 $prox
