--- a/model/Cargo.toml
+++ b/model/Cargo.toml
@@ -5,6 +5,10 @@ authors = ["Greaka <cargo@greaka.de>"]
 edition = "2021"
 workspace = "../"
 
+[lib]
+name = "gw2api_model"
+path = "src/lib.rs"  
+
 [dependencies.either]
 version = "1.6.1"
 features = ["serde"]
