--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -31,7 +31,7 @@ jobs:
     - name: download latest earthly
       run: "sudo /bin/sh -c 'wget https://github.com/earthly/earthly/releases/download/v0.6.15/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'"
     - name: build and run test
-      run: earthly --ci --push -P +test
+      run: earthly --ci --push --remote-cache=greaka/gw2api:cache -P +test
 
   test-ignored:
     runs-on: ubuntu-latest
@@ -56,4 +56,4 @@ jobs:
       run: "sudo /bin/sh -c 'wget https://github.com/earthly/earthly/releases/download/v0.6.15/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'"
     - name: build and run test
       continue-on-error: true
-      run: earthly --ci -P +test-ignored
+      run: earthly --ci --remote-cache=greaka/gw2api:cache -P +test-ignored
