--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -1,26 +1,46 @@
 [package]
-name = "gw2api-http"
+name = "gw2api"
 version = "0.1.0"
 edition = "2021"
 workspace = "../"
 
 [lib]
-name = "gw2api_http"
+name = "gw2api"
 path = "src/lib.rs"
 
 [dependencies]
 chrono = "0.4.19"
 fxhash = "0.2.1"
 serde = "1.0.137"
-bus = "2.2.3"
-either = "1.6.1"
-rayon = "1.5.3"
-parking_lot = "0.12.1"
 thiserror = "1.0.31"
+async-trait = "0.1.56"
+either = "1.6.1"
+futures = "0.3.21"
+serde_json = "1.0.81"
+static_init = "1.0.2"
+urlencoding = "2.1.0"
 
-[dependencies.ureq]
-version = "2.4.0"
-features = ["json"]
+[dependencies.futures-util]
+version = "0.3.21"
+optional = true
+
+[dependencies.tokio]
+version = "1.19.2"
+default-features = false
+features = ["sync", "rt", "time"]
+
+[dependencies.hyper]
+version = "0.14.19"
+default-features = false
+features = ["runtime", "http1", "client"]
+
+[dependencies.hyper-rustls]
+version = "0.23.0"
+default-features = false
+features = ["http1", "native-tokio", "logging", "tls12"]
 
 [dependencies.gw2api-model]
 path = "../model"
+
+[features]
+blocking = ["futures-util"]
