--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -20,10 +20,6 @@ serde_json = "1.0.81"
 static_init = "1.0.2"
 urlencoding = "2.1.0"
 
-[dependencies.futures-util]
-version = "0.3.21"
-optional = true
-
 [dependencies.tokio]
 version = "1.19.2"
 default-features = false
@@ -43,4 +39,4 @@ features = ["http1", "native-tokio", "logging", "tls12"]
 path = "../model"
 
 [features]
-blocking = ["futures-util"]
+blocking = []
