rebrand to gw2lib

--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -1,3 +1,5 @@
+name: integration_test
+
 'on':
   push:
     branches:
@@ -31,7 +33,7 @@ jobs:
     - name: download latest earthly
       run: "sudo /bin/sh -c 'wget https://github.com/earthly/earthly/releases/download/v0.6.15/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'"
     - name: build and run test
-      run: earthly --ci --push --remote-cache=greaka/gw2api:cache -P +test
+      run: earthly --ci --push --remote-cache=greaka/gw2lib:cache -P +test
 
   test-ignored:
     runs-on: ubuntu-latest
@@ -56,4 +58,4 @@ jobs:
       run: "sudo /bin/sh -c 'wget https://github.com/earthly/earthly/releases/download/v0.6.15/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'"
     - name: build and run test
       continue-on-error: true
-      run: earthly --ci --remote-cache=greaka/gw2api:cache -P +test-ignored
+      run: earthly --ci --remote-cache=greaka/gw2lib:cache -P +test-ignored
