--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "gw2api"
+name = "gw2lib"
 version = "0.1.0"
 edition = "2021"
 workspace = "../"
 
 [lib]
-name = "gw2api"
+name = "gw2lib"
 path = "src/lib.rs"
 
 [dependencies]
@@ -35,7 +35,7 @@ version = "0.23.0"
 default-features = false
 features = ["http1", "native-tokio", "logging", "tls12"]
 
-[dependencies.gw2api-model]
+[dependencies.gw2lib-model]
 path = "../model"
 
 [features]
