--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -18,5 +18,5 @@ features = ["rustls-tls"]
 version = "1.19.2"
 features = ["full"]
 
-[dependencies.gw2api]
+[dependencies.gw2lib]
 path = "../http"
