--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "gw2lib"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
 workspace = "../"
+description = "A simple to use Gw2 API wrapper library"
+repository = "https://github.com/greaka/gw2lib"
+categories = ["api-bindings"]
+keywords = ["api", "guild-wars-2", "gw2", "wrapper", "async"]
+readme = "../README.md"
+license = "MIT/Apache-2.0"
 
 [lib]
 name = "gw2lib"
@@ -36,7 +42,7 @@ default-features = false
 features = ["http1", "native-tokio", "logging", "tls12"]
 
 [dependencies.gw2lib-model]
-path = "../model"
+version = "1.0.0"
 
 [features]
 blocking = []
