--- a/model/Cargo.toml
+++ b/model/Cargo.toml
@@ -1,9 +1,14 @@
 [package]
 name = "gw2lib-model"
-version = "0.1.0"
+version = "1.0.0"
 authors = ["Greaka <cargo@greaka.de>"]
 edition = "2021"
 workspace = "../"
+description = "Models for gw2lib"
+repository = "https://github.com/greaka/gw2lib"
+categories = ["api-bindings"]
+keywords = ["api", "guild-wars-2", "gw2", "wrapper", "async"]
+license = "MIT/Apache-2.0"
 
 [lib]
 name = "gw2lib_model"
