--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -42,7 +42,7 @@ default-features = false
 features = ["http1", "native-tokio", "logging", "tls12"]
 
 [dependencies.gw2lib-model]
-#version = "1.0.0"
+version = "1.1"
 path = "../model"
 
 [features]
