--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -33,12 +33,15 @@ jobs:
         uses: actions-rs/toolchain@16499b5e05bf2e26879000db0c1d13f7e13fa3af #@v1
         with:
           profile: minimal
-          toolchain: stable
-          components: clippy
+          toolchain: nightly
+          components: clippy, rustfmt
           override: true
 
       - name: Install required cargo
         run: cargo install clippy-sarif sarif-fmt
+
+      - name: Run rust-fmt check
+        run: cargo +nightly fmt --check
 
       - name: Run rust-clippy
         run:
