--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -9,6 +9,9 @@ path = "src/main.rs"
 
 [dependencies]
 actix-web = "4.2.1"
+chrono = "0.4.22"
+async-trait = "0.1.57"
+
 [dependencies.reqwest]
 version = "0.11.13"
 default-features = false
@@ -17,6 +20,3 @@ features = ["rustls-tls"]
 [dependencies.tokio]
 version = "1.23.0"
 features = ["full"]
-
-[dependencies.gw2lib]
-path = "../http"
