--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gw2lib"
-version = "3.0.0-alpha-2"
+version = "3.0.0-alpha-3"
 edition = "2021"
 workspace = "../"
 description = "A simple to use Gw2 API wrapper library"
@@ -25,6 +25,12 @@ futures = "0.3.25"
 serde_json = "1.0.91"
 static_init = "1.0.3"
 urlencoding = "2.1.2"
+
+[dependencies.redis]
+version = "0.22.1"
+default-features = false
+features = ["tokio-comp"]
+optional = true
 
 [dependencies.tokio]
 version = "1.23.0"
