--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -16,7 +16,7 @@ path = "src/lib.rs"
 
 [dependencies]
 chrono = "0.4.23"
-fxhash = "0.2.1"
+dashmap = "5.4.0"
 serde = "1.0.152"
 thiserror = "1.0.38"
 async-trait = "0.1.60"
