--- a/model/Cargo.toml
+++ b/model/Cargo.toml
@@ -14,6 +14,9 @@ license = "MIT/Apache-2.0"
 name = "gw2lib_model"
 path = "src/lib.rs"
 
+[dependencies]
+urlencoding = "2.1.2"
+
 [dependencies.either]
 version = "1.8.0"
 features = ["serde"]
