--- a/model/Cargo.toml
+++ b/model/Cargo.toml
@@ -15,6 +15,7 @@ name = "gw2lib_model"
 path = "src/lib.rs"
 
 [dependencies]
+serde_tuple = "0.5.0"
 urlencoding = "2.1.2"
 
 [dependencies.either]
