--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gw2lib"
-version = "3.0.0-alpha-ad"
+version = "3.0.0"
 edition = "2021"
 workspace = "../"
 description = "A simple to use Gw2 API wrapper library"
