--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -2,7 +2,7 @@ name: integration_test
 
 on:
   push:
-  pull_request:
+  pull_request_target:
   schedule:
     - cron: '30 5 * * *'
   workflow_dispatch:
