--- a/.config/nextest.toml
+++ b/.config/nextest.toml
@@ -59,7 +59,7 @@ slow-timeout = "60s"
 # Output a JUnit report into the given file inside 'store.dir/<profile-name>'.
 # If unspecified, JUnit is not written out.
 
-# path = "junit.xml"
+path = "junit.xml"
 
 # The name of the top-level "report" element in JUnit report. If aggregating
 # reports across different test runs, it may be useful to provide separate names
