--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -14,6 +14,14 @@ license = "MIT/Apache-2.0"
 name = "gw2lib"
 path = "src/lib.rs"
 
+[features]
+default = ["rustls"]
+blocking = []
+redis = ["dep:redis"]
+tracing = ["dep:tracing"]
+native-tls = ["reqwest/native-tls"]
+rustls = ["reqwest/rustls-tls-native-roots", "dep:rustls"]
+
 [dependencies]
 chrono = "0.4.24"
 dashmap = "6.1.0"
@@ -23,15 +31,16 @@ either = "1.8.1"
 futures = "0.3.28"
 serde_json = "1.0.96"
 static_init = "1.0.3"
-rand = "0.8.5"
-hyper-util = "0.1.10"
+rand = "0.9.1"
+# must be kept in sync with reqwest
+url = "2.4.1"
 
 [dependencies.tracing]
-version = "0.1.37"
+version = "0.1.41"
 optional = true
 
 [dependencies.redis]
-version = "0.27.6"
+version = "0.32.4"
 default-features = false
 features = ["tokio-comp", "tls-rustls"]
 optional = true
@@ -41,24 +50,21 @@ version = "1.27.0"
 default-features = false
 features = ["sync", "rt", "time", "macros"]
 
-[dependencies.hyper]
-version = "1.5.2"
+[dependencies.reqwest]
+version = "0.12.22"
 default-features = false
-features = ["http1", "client"]
+features = ["gzip", "json"]
 
-[dependencies.hyper-rustls]
-version = "0.27.4"
+[dependencies.rustls]
+# must be kept in sync with the version reqwest uses
+version = "0.23.4"
+optional = true
 default-features = false
-features = ["http1", "native-tokio", "logging", "tls12"]
+features = ["ring"]
 
 [dependencies.gw2lib-model]
 version = "2.0.5"
 path = "../model"
-
-[features]
-blocking = []
-redis = ["dep:redis"]
-tracing = ["dep:tracing"]
 
 [package.metadata.docs.rs]
 features = ["redis"]
