add a poor mans semaphore to redis rate limit connections

--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -17,7 +17,7 @@ path = "src/lib.rs"
 [features]
 default = ["rustls"]
 blocking = []
-redis = ["dep:redis"]
+redis = ["dep:redis", "dep:kanal"]
 tracing = ["dep:tracing"]
 native-tls = ["reqwest/native-tls"]
 rustls = ["reqwest/rustls-tls-native-roots", "dep:rustls"]
@@ -43,6 +43,10 @@ optional = true
 version = "0.32.4"
 default-features = false
 features = ["tokio-comp", "tls-rustls"]
+optional = true
+
+[dependencies.kanal]
+version = "0.1.1"
 optional = true
 
 [dependencies.tokio]
