--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "gw2lib"
 version = "3.0.2"
-edition = "2021"
+edition = "2024"
 workspace = "../"
 description = "A simple to use Gw2 API wrapper library"
 repository = "https://github.com/greaka/gw2lib"
@@ -23,23 +23,25 @@ native-tls = ["reqwest/native-tls"]
 rustls = ["reqwest/rustls-tls-native-roots", "dep:rustls"]
 
 [dependencies]
-chrono = "0.4.24"
+chrono = "0.4.42"
+# todo: arc_swap?
 dashmap = "6.1.0"
-serde = "1.0.160"
-thiserror = "2.0.8"
-either = "1.8.1"
-futures = "0.3.28"
-serde_json = "1.0.96"
-static_init = "1.0.3"
-rand = "0.9.1"
+serde = "1.0.225"
+thiserror = "2.0.16"
+either = "1.15.0"
+futures = "0.3.31"
+serde_json = "1.0.145"
+static_init = "1.0.4"
+rand = "0.9.2"
 # must be kept in sync with reqwest
-url = "2.4.1"
+url = "2.5.7"
 
 [dependencies.tracing]
 version = "0.1.41"
 optional = true
 
 [dependencies.redis]
+# todo: 1.0 soon?
 version = "0.32.4"
 default-features = false
 features = ["tokio-comp", "tls-rustls"]
@@ -50,24 +52,24 @@ version = "0.1.1"
 optional = true
 
 [dependencies.tokio]
-version = "1.27.0"
+version = "1.47.1"
 default-features = false
 features = ["sync", "rt", "time", "macros"]
 
 [dependencies.reqwest]
-version = "0.12.22"
+version = "0.12.23"
 default-features = false
 features = ["gzip", "json"]
 
 [dependencies.rustls]
 # must be kept in sync with the version reqwest uses
-version = "0.23.4"
+version = "0.23.31"
 optional = true
 default-features = false
 features = ["ring"]
 
 [dependencies.gw2lib-model]
-version = "2.0.5"
+version = "4.0.0"
 path = "../model"
 
 [package.metadata.docs.rs]
