--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -19,8 +19,8 @@ default = ["rustls"]
 blocking = []
 redis = ["dep:redis", "dep:kanal"]
 tracing = ["dep:tracing"]
-native-tls = ["reqwest/native-tls"]
-rustls = ["reqwest/rustls-tls-native-roots", "dep:rustls"]
+native-tls = ["reqwest/native-tls", "redis?/tokio-native-tls-comp"]
+rustls = ["reqwest/rustls-tls-native-roots", "dep:rustls", "redis?/tokio-rustls-comp"]
 
 [dependencies]
 chrono = "0.4.42"
@@ -42,9 +42,8 @@ optional = true
 
 [dependencies.redis]
 # todo: 1.0 soon?
-version = "0.32.4"
+version = "0.32.5"
 default-features = false
-features = ["tokio-comp", "tls-rustls"]
 optional = true
 
 [dependencies.kanal]
